k8s-deploys/sgw.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-go-web-app
  namespace: sgw
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: sgw
        image: kocmoc1/sgw:SGW_TAG
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simple-go-web-app-service
  namespace: sgw
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-go-web-app-ingress
  namespace: sgw
spec:
  ingressClassName: nginx
  rules:
  - host: sgw.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-go-web-app-service
            port:
              number: 8080
